objects/CRMforNonProfit__Darujme_Donation__c.object
<CustomObject>
    <fields>
        <fullName>CRMforNonProfit__Address__c</fullName>
        <label>Address</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CRMforNonProfit__Amount__c</fullName>
        <label>Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CRMforNonProfit__Campaign__c</fullName>
        <label>Campaign</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CRMforNonProfit__Created_At__c</fullName>
        <label>Created At</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CRMforNonProfit__Currency__c</fullName>
        <label>Currency</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CRMforNonProfit__DIC__c</fullName>
        <label>DIČ</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CRMforNonProfit__Email__c</fullName>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>CRMforNonProfit__External_Identifier__c</fullName>
        <label>External Identifier</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CRMforNonProfit__First_Name__c</fullName>
        <label>First Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CRMforNonProfit__ICO_DPH__c</fullName>
        <label>IČO DPH</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CRMforNonProfit__ICO__c</fullName>
        <label>IČO</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CRMforNonProfit__ID__c</fullName>
        <externalId>true</externalId>
        <label>ID</label>
        <length>50</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>CRMforNonProfit__Last_Name__c</fullName>
        <label>Last Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CRMforNonProfit__Nazev_firmy__c</fullName>
        <label>Název firmy</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CRMforNonProfit__Payment_Method__c</fullName>
        <label>Payment Method</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>card</fullName>
                </value>
                <value>
                    <fullName>transfer</fullName>
                </value>
                <value>
                    <fullName>tatrapay</fullName>
                </value>
                <value>
                    <fullName>sporopay</fullName>
                </value>
                <value>
                    <fullName>eplatby</fullName>
                </value>
                <value>
                    <fullName>uniplatba</fullName>
                </value>
                <value>
                    <fullName>pobapay</fullName>
                </value>
                <value>
                    <fullName>webpay</fullName>
                </value>
                <value>
                    <fullName>otppay</fullName>
                </value>
                <value>
                    <fullName>csobpay</fullName>
                </value>
                <value>
                    <fullName>paybysquare</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CRMforNonProfit__Periodicity_No__c</fullName>
        <label>Periodicity No</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CRMforNonProfit__Periodicity__c</fullName>
        <label>Periodicity</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CRMforNonProfit__Phone__c</fullName>
        <label>Phone</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CRMforNonProfit__Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>none</fullName>
                </value>
                <value>
                    <fullName>pending</fullName>
                </value>
                <value>
                    <fullName>authorized</fullName>
                </value>
                <value>
                    <fullName>settled</fullName>
                </value>
                <value>
                    <fullName>failed</fullName>
                </value>
                <value>
                    <fullName>expired</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CRMforNonProfit__Variable_Symbol__c</fullName>
        <label>Variable Symbol</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <label>Darujme Donation</label>
    <listViews>
        <fullName>CRMforNonProfit__All</fullName>
        <columns>NAME</columns>
        <columns>CRMforNonProfit__Amount__c</columns>
        <columns>CRMforNonProfit__Email__c</columns>
        <columns>CRMforNonProfit__First_Name__c</columns>
        <columns>CRMforNonProfit__ID__c</columns>
        <columns>CRMforNonProfit__Last_Name__c</columns>
        <columns>CRMforNonProfit__Status__c</columns>
        <columns>CRMforNonProfit__Created_At__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>CRMforNonProfit__All1</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>SKT-{0000000000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Darujme Donations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>